--- a/style.css
+++ b/style.css
@@ -993,3 +993,22 @@ button.filter-button:hover {
     padding-top: 0 !important;
 }
 
+/* Hero for book now  */
+#hero {
+  background-image: url('images/HERO BOOK NOW.jpg');
+  background-position: center center; /* You can change this to 'top center', 'left top', '50% 20%', etc */
+  background-repeat: no-repeat;
+  background-size: cover; /* or 'contain' or specify width/height */
+}
+
+#hero .overlay {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background-color: rgba(0, 0, 0, 0.45);
+  z-index: 1;
+}
+
+#hero > .container {
+  position: relative;
+  z-index: 2;
+}
