--- a/style.css
+++ b/style.css
@@ -611,7 +611,7 @@ button.filter-button:hover {
 }
 */
 
-/* .hero-overlay {
+.hero-overlay {
     position: absolute;
     top: 0;
     left: 0;
@@ -619,7 +619,7 @@ button.filter-button:hover {
     height: 100%;
     background: rgba(0, 0, 0, 0.8);
     z-index: -1;
-} */
+}
 /* Quick Links */
 #about,
 #about-us {
