--- a/style.css
+++ b/style.css
@@ -600,7 +600,7 @@ button.filter-button:hover {
   position: relative;
   overflow: hidden;
   height: 100vh;
-  min-height: 600px;
+  min-height: 60%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -688,7 +688,7 @@ button.filter-button:hover {
   position: relative;
   overflow: hidden;
   height: 55vh;
-  min-height: 600px;
+  min-height: 60%;
   display: flex;
   align-items: center;
   justify-content: center;
